tests/rosetta/out/Fortran/amicable-pairs.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program amicable_pairs
  implicit none
    integer :: sum
    integer :: p
    integer :: s
    character(len=100) :: s0
    integer, dimension(0) :: sums
      integer, allocatable, dimension(:) :: app1
      integer :: m
  main()
  contains
  recursive integer function pfacSum(i) result(res)
    integer, intent(in) :: i
    sum = 0
    p = 1
    do while (((p <= i) / 2))
      if ((mod(i,p) == 0)) then
        sum = (sum + p)
      end if
      p = (p + 1)
    end do
    res = sum
    return
  end function pfacSum
  recursive character(len=100) function pad(n,width) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: width
    write(s0,'(G0)') n
    s = s0
    do while ((size(s) < width))
      s = ' ' // s
    end do
    res = s
    return
  end function pad
  recursive integer function main() result(res)
    sums = (//)
    i = 0
    do while ((i < 20000))
      allocate(app1(size(sums)+1))
      app1(1:size(sums)) = sums
      app1(size(sums)+1) = 0
      sums = app1
      i = (i + 1)
    end do
    i = 1
    do while ((i < 20000))
      sums(((i)+1)) = pfacSum(i)
      i = (i + 1)
    end do
    print *, 'The amicable pairs below 20,000 are:'
    n = 2
    do while ((n < 19999))
      m = sums(((n)+1))
      if ((((((m > n) .and. m) < 20000) .and. n) == sums(((m)+1)))) then
        print *, trim(trim('  ' // pad(n,5)) // ' and ') // pad(m,5)
      end if
      n = (n + 1)
    end do
  end function main
end program amicable_pairs
